# spicetify-remote

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  com.dekub.spicetify-remote.streamDeckPlugin  config.json  conftest.py  install-service.bat  package-lock.json  package.json  pyproject.toml  queue-prompt.md  remoteVolume.js  remove-service.bat  requirements-dev.txt  requirements.txt  server.py  service.py  setup.bat  setup.js  setup.py  setup.sh  state.json  streamerbot.txt  test_server.py  volume-server.js
data/: config.json
docs/: service.md  stream-deck.md  troubleshooting.md
docs/agents/: architecture.md  conventions.md  gotchas.md  overview.md  structure.md  work.md
obs-widget/: obs-script.js  obs-style.css  obs-widget.html
server/: broadcast.py  config.json  config.py  handlers.py  install.py  log.py  lyrics.py  routes.py  server.py  service.py  state.py
spicetify-extension/: remoteVolume.js
src/: config.js  message-handlers.js  server.js  state.js  utils.js  websocket.js
streamdeck-plugin/: package-lock.json  package.json  rollup.config.mjs
streamdeck-plugin/com.dekub.spicetify-remote.sdPlugin/: manifest.json
streamerbot/: streamerbot.txt
streamerbot-commands/: AddQueue.cs  ClearQueue.cs  Like.cs  Next.cs  Pause.cs  PlayPause.cs  Previous.cs  README.md  Seek.cs  SetVolume.cs  ToggleRepeat.cs  ToggleShuffle.cs  VolumeDown.cs  VolumeUp.cs
tools/: dev.py  install.py  service.py
web/: filter.js  index.html  lib.js  script.js  style.css
website/: index.html  obs-script.js  obs-style.css  obs-widget.html  script.js  style.css
(+20 files in other folders)
