[project]
name = "spicetify-remote"
version = "1.1.0"
requires-python = ">=3.8"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
