[project]
name = "spicetify-remote"
version = "1.5.3"
requires-python = ">=3.9"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
